fix home:gallery gap

--- a/css/main.css
+++ b/css/main.css
@@ -805,8 +805,8 @@ video {
   width: 480px;
 }
 
-.w-\[483px\] {
-  width: 483px;
+.w-\[484px\] {
+  width: 484px;
 }
 
 .w-\[490px\] {
@@ -879,6 +879,30 @@ video {
 
 .w-\[936px\] {
   width: 936px;
+}
+
+.w-\[950px\] {
+  width: 950px;
+}
+
+.w-\[485px\] {
+  width: 485px;
+}
+
+.w-\[486px\] {
+  width: 486px;
+}
+
+.w-\[482px\] {
+  width: 482px;
+}
+
+.w-\[4345x\] {
+  width: 4345x;
+}
+
+.w-\[435x\] {
+  width: 435x;
 }
 
 .resize-none {
